Revision history for Perl-PrereqScanner

{{$NEXT}}

1.010     2012-02-22 10:07:46 America/New_York
  - fix documentation bug (thanks to Marius Olsthoorn for the report)

  - add a test case to prove someone wrong on the internet

1.009     2012-01-01 23:11:51 America/New_York
 - switch from Version::Requirements to CPAN::Meta::Requirements

1.008     2011-11-01 10:35:46 Europe/Paris
 - fix rt#72062 - look for "require Module; Module->VERSION(min);"
   (Christopher J. Madsen)

1.007     2011-08-31 09:22:12 Europe/Paris
 - new option --combine for scan_prereqs script (randy stauner)

1.006     2011-08-20 14:03:24 Europe/Paris
  - add the POE scanner for POE components (David Golden)

1.005     2011-08-17 18:39:22 America/New_York
  - stop stripping "always core" prereqs like strict and warnings

  - add the Aliased scanner for aliased.pm (thanks, David Golden)

1.004     2011-05-30 21:02:52 America/New_York
  - avoid calling a method on undef (i.e., cope with PPI doing surprising
    things)

1.003     2011-05-16 15:46:02 America/New_York
  - fix a bug that caused things like "within" and "trextends" to trigger
    the Moose scanner

1.002     2011-02-02 10:21:55 Europe/Paris
 - fix rt#61608 - missing description in whatisentry for TestMore.pm

1.001     2011-01-05 16:35:26 Europe/Paris
 - fix bin/prereqs (randy stauner)

1.000     2010-12-06 17:54:20 Europe/Paris
 - fix rt#59016 - support for moose 1.03 version declarations (apocalypse)

0.101892  2010-12-03 17:15:25 Europe/Paris
 - throw an exception if PPI fails to parse code (vyacheslav matjukhin)

0.101891  2010-09-05 15:31:49 America/New_York
 - add a core scanner for Test::More's done_testing
 - do not detect prereqs for invalid class names in Moose scanner
 - added TODO tests for "with('Name')" -- note the parens

0.101890  2010-07-08 18:45:57 Europe/Paris
 - fix rt#59121 - remove lurking temp files

0.101480  2010-05-28 08:41:56 America/New_York
 - bump prereq version of String::RewritePrefix
